@@ -9,6 +9,7 @@ Release history for Devel-Isa-Explainer
  - deduplicating subs now entirely removed, subs that are actually there in the package must always be displayed as
    they are either injected by roles or importing, and can actually end up calling themselves under inheritance. ( This
    however is highly prone to explosions because MRO core sucks ) ( Related to #10 )
+ - isa-splain now supports --help and --version ( Closes #9 )
 
  [Dependencies::Stats]
  - Dependencies changed since 0.002001, see misc/*.deps* for details
